<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Buscar usuarios / will display always -->
    <item android:id="@+id/action_search_users"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search_users"
          android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView"/>
     
    <!-- Compartir evento -->
    <item android:id="@+id/action_share_event"
          android:icon="@drawable/ic_action_new_event"
          android:title="@string/action_share_event"
          android:showAsAction="ifRoom" />
     
    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="ifRoom" />
    
   <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_close_session"
        android:showAsAction="never"
        android:title="@string/action_close_session"/>
     
</menu>